fixed double scroll bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,12 +47,16 @@
   --border: #262626; /* Neutral 800 */
 }
 
-html,
+html {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-jetbrains-mono), ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /* Terminal Utilities */
